fixed overflow style

--- a/src/styles/tasks.css
+++ b/src/styles/tasks.css
@@ -6,7 +6,6 @@
     place-items: flex-start;
     height: 80%;
     padding: 2rem;
-    overflow: auto;
   }
 
 #tasks button {
